@@ -165,9 +165,10 @@ MagickExport MagickPassFail DescribeImage(Image *image,FILE *file,
           FormatSize(GetBlobSize(image),format);
           (void) fprintf(file,"%.1024s ",format);
         }
-      (void) fprintf(file,"%0.3fu %ld:%02ld",user_time,
+      (void) fprintf(file,"%0.3fu %ldm:%.3fs",
+                     user_time,
                      (long) (elapsed_time/60.0),
-                     (long) ceil(fmod(elapsed_time,60.0)));
+                     fmod(elapsed_time,60.0));
       /*
         Only display pixel read rate if the time accumulated is at
         least six times the timer's resolution (typically 0.01 on
@@ -891,9 +892,9 @@ MagickExport MagickPassFail DescribeImage(Image *image,FILE *file,
     (void) fprintf(file,"  User Time: %0.3fu\n",user_time);
   if (elapsed_time >= GetTimerResolution())
     {
-      (void) fprintf(file,"  Elapsed Time: %ld:%02ld\n",
+      (void) fprintf(file,"  Elapsed Time: %ldm:%.3fs\n",
                      (long) (elapsed_time/60.0),
-                     (long) ceil(fmod(elapsed_time,60.0)));
+                     fmod(elapsed_time,60.0));
       pixels_per_second=(magick_int64_t) ((double) image->rows*
                                           image->columns/
                                           (elapsed_time > GetTimerResolution() ?
