@@ -38,6 +38,8 @@
 <p>2016-08-07  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/describe.c (DescribeImage): Include milliseconds
+resolution in elapsed time output.</li>
 <li>magick/timer.c (ElapsedTime): Use clock_gettime() (when
 available with default linkage) to obtain elapsed time.</li>
 </ul>
